--- a/ProjectSquad/Base.lproj/Main.storyboard
+++ b/ProjectSquad/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="64" width="400" height="536"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.96862745098039216" green="0.96862745098039216" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
@@ -684,7 +684,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KUH-4h-1sn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-555" y="648"/>
+            <point key="canvasLocation" x="-624" y="756"/>
         </scene>
         <!--Request View Controller-->
         <scene sceneID="Qht-C1-NCu">
@@ -974,7 +974,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TWv-mN-SSw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2005.5" y="756"/>
+            <point key="canvasLocation" x="-2044.5" y="771"/>
         </scene>
         <!--Add Friend View Controller-->
         <scene sceneID="d8i-Af-KDB">
@@ -1410,14 +1410,13 @@
                         </variation>
                     </view>
                     <connections>
-                        <segue destination="xMH-XL-SJ3" kind="presentation" identifier="setUsernameSegue" id="od7-yw-OoU"/>
                         <segue destination="htr-Ow-TLC" kind="presentation" identifier="loggedInSegue" id="Ubv-iq-Aj8"/>
                         <segue destination="bHH-bg-23o" kind="presentation" identifier="hasSquadSegue" id="xGh-tP-eez"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oEO-P6-Xuq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2773.5" y="756"/>
+            <point key="canvasLocation" x="-2734.5" y="756"/>
         </scene>
         <!--Map-->
         <scene sceneID="zdT-a2-Vyp">
@@ -1428,14 +1427,11 @@
                         <viewControllerLayoutGuide type="bottom" id="5PZ-wV-ZDV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bI-Rv-97t">
-                        <rect key="frame" x="0.0" y="64" width="400" height="536"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="wai-4j-O2j">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="0.0" y="20" width="400" height="516"/>
-                                </variation>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1488,7 +1484,7 @@
                         <viewControllerLayoutGuide type="bottom" id="tV4-3y-3DU"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="OPa-eV-wpj">
-                        <rect key="frame" x="0.0" y="64" width="400" height="536"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3TC-WU-qIf">
@@ -1506,8 +1502,7 @@
                                         <exclude reference="eAe-Ql-y89"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="0.0" y="476" width="400" height="60"/>
+                                <variation key="widthClass=compact">
                                     <mask key="constraints">
                                         <include reference="eAe-Ql-y89"/>
                                     </mask>
@@ -1571,9 +1566,6 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="0.0" y="157" width="400" height="320"/>
-                                </variation>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Members" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IGU-zb-RKK">
                                 <rect key="frame" x="-42" y="-21" width="42" height="21"/>
@@ -1700,8 +1692,7 @@
         <image name="SquadIconLarge" width="1000" height="1000"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="MRK-qw-gKp"/>
-        <segue reference="Yua-tc-omU"/>
-        <segue reference="p9A-Rb-3Sn"/>
+        <segue reference="xGh-tP-eez"/>
+        <segue reference="Pqo-e5-pAL"/>
     </inferredMetricsTieBreakers>
 </document>
